--- a/main.yml
+++ b/main.yml
@@ -1,8 +1,7 @@
 ---
 - hosts: all
 
-  vars_files: 
-    - config.yml
+  vars_files: [] 
 
   pre_tasks:
     - name: Include playbook configuration.
