--- a/work.yml
+++ b/work.yml
@@ -108,7 +108,8 @@ homebrew_cask_uninstalled_apps:
 
 
 # See `geerlingguy.mas` role documentation for usage instructions.
-mas_installed_apps: []
+mas_installed_apps:
+  - 1480933944
 mas_email: ""
 mas_password: ""
 
