--- a/work.yml
+++ b/work.yml
@@ -14,6 +14,8 @@ configure_zsh: yes
 configure_sublime: no
 sudoers_custom_config: ''
 
+zsh_fzf_history_search_dir: '~/.oh-my-zsh/custom/plugins/zsh-fzf-history-search/'
+
 # computer_name: geordan-mbp
 # hostname: geordan-mbp.ht.home
 # local_hostname: geordan-mbp.local
