--- a/home.yml
+++ b/home.yml
@@ -12,7 +12,9 @@ configure_terminal: no
 configure_tmux: yes
 configure_zsh: yes
 configure_sublime: no
+
 sudoers_custom_config: ''
+zsh_fzf_history_search_dir: '~/.oh-my-zsh/custom/plugins/zsh-fzf-history-search/'
 
 computer_name: geordan-mbp
 hostname: geordan-mbp.lan
