--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -1,9 +1,29 @@
 ---
+# vars:
+#   - powerlevel10k_dir: '~/.oh-my-zsh/custom/themes/powerlevel10k'
+
+- name: powerlevel10k - check for existing plugin
+  ansible.builtin.stat:
+    path: ~/.oh-my-zsh/custom/themes/powerlevel10k/
+  register: powerlevel10k_dir
+
+- name: powerlevel10k - fetch plugin
+  ansible.builtin.git:
+    repo: 'https://github.com/romkatv/powerlevel10k.git'
+    dest: "~/.oh-my-zsh/custom/themes/powerlevel10k/"
+  when: powerlevel10k_dir.isdir is not defined
 
 - name: zsh-vi-mode - check for existing plugin
   ansible.builtin.stat:
     path: ~/.oh-my-zsh/custom/plugins/zsh-vi-mode
   register: zsh_vi_mode_dir
+
+- name: zsh-vi-mode - fetch plugin
+  ansible.builtin.git:
+    repo: 'https://github.com/jeffreytse/zsh-vi-mode.git'
+    dest: ~/.oh-my-zsh/custom/plugins/zsh-vi-mode
+  when: zsh_vi_mode_dir.isdir is not defined
+
 
 - name: zsh-vi-mode - fetch plugin
   ansible.builtin.git:
