--- a/work.yml
+++ b/work.yml
@@ -34,6 +34,7 @@ dotfiles_files:
 homebrew_upgrade_all_packages: yes
 homebrew_installed_packages: 
 - asdf
+- docker
 - exa
 - flake8
 - fzf
@@ -42,6 +43,7 @@ homebrew_installed_packages:
 - mtr
 - neovim
 - node
+- nvm
 - pyright
 - reattach-to-user-namespace
 - ripgrep
