--- a/work.yml
+++ b/work.yml
@@ -21,10 +21,11 @@ zsh_fzf_history_search_dir: '~/.oh-my-zsh/custom/plugins/zsh-fzf-history-search/
 # local_hostname: geordan-mbp.local
 
 dotfiles_repo: git@github.com:geordan/dotfiles.git
-dotfiles_repo_version: main
+dotfiles_repo_version: neovim-rewrite
 dotfiles_repo_accept_hostkey: yes
 dotfiles_repo_local_destination: ~/code/dotfiles
 dotfiles_files:
+- .alias
 - .config
 - .oh-my-zsh
 - .p10k.zsh
@@ -34,6 +35,7 @@ dotfiles_files:
 homebrew_upgrade_all_packages: yes
 homebrew_installed_packages: 
 - asdf
+- awscli
 - docker
 - exa
 - flake8
@@ -77,6 +79,8 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 
 homebrew_cask_apps:
+- 1password
+- 1password-cli
 - docker
 - firefox
 - font-meslo-for-powerline
@@ -98,7 +102,6 @@ homebrew_cask_apps:
 - virtualbox-extension-pack
 
 homebrew_cask_uninstalled_apps:
-- 1password
 - 1password-cli
 - alacritty
 - calibre
