--- a/work.yml
+++ b/work.yml
@@ -36,12 +36,15 @@ homebrew_upgrade_all_packages: yes
 homebrew_installed_packages: 
 - asdf
 - awscli
+- bat
 - docker
 - exa
 - flake8
 - fzf
 - go
 - gopls
+- htop
+- lua-language-server
 - mtr
 - neovim
 - node
