--- a/home.yml
+++ b/home.yml
@@ -21,12 +21,14 @@ hostname: geordan-mbp.lan
 local_hostname: geordan-mbp.lan
 
 dotfiles_repo: git@github.com:geordan/dotfiles.git
-dotfiles_repo_version: neovim-rewrite
+dotfiles_repo_version: main
 dotfiles_repo_accept_hostkey: yes
 dotfiles_repo_local_destination: ~/code/dotfiles
 dotfiles_files:
 - .alias
+- bin
 - .config
+- .functions
 - .gitconfig
 - .oh-my-zsh
 - .p10k.zsh
@@ -95,7 +97,7 @@ homebrew_cask_apps:
 - kitty
 - launchbar
 - logitech-camera-settings
-- logitech-options
+- logi-options-plus
 - mochi
 - numi
 - omnifocus
@@ -112,7 +114,6 @@ homebrew_cask_apps:
 homebrew_cask_uninstalled_apps:
 - alacritty
 - calibre
-- svn 
 - font-fira-code
 - font-fira-code-nerd-font
 - font-fira-mono
@@ -120,6 +121,8 @@ homebrew_cask_uninstalled_apps:
 - font-fira-mono-nerd-font
 - font-jetbrains-mono
 - iterm2
+- logitech-options
+- svn 
 - vagrant
 - virtualbox
 - virtualbox-extension-pack
@@ -158,6 +161,8 @@ pip_packages:
 - name: jsontool
   state: latest
 - name: neovim
+  state: latest
+- name: tasklib
   state: latest
 # version: N/A
 
