--- a/work.yml
+++ b/work.yml
@@ -29,6 +29,7 @@ dotfiles_files:
 - bin
 - .config
 - .functions
+- .gitconfig
 - .oh-my-zsh
 - .p10k.zsh
 - .tmux.conf
@@ -39,6 +40,7 @@ homebrew_installed_packages:
 - asdf
 - awscli
 - bat
+- bottom
 - docker
 - exa
 - flake8
@@ -101,6 +103,7 @@ homebrew_cask_apps:
 - rectangle
 - slack
 - spotify
+- timeular
 - vagrant
 - virtualbox
 - virtualbox-extension-pack
@@ -122,7 +125,6 @@ homebrew_cask_uninstalled_apps:
 - qmk-toolbox
 - signal
 - svn 
-- timeular
 - zsa-wally
 
 
