--- a/home.yml
+++ b/home.yml
@@ -23,7 +23,7 @@ local_hostname: geordan-mbp.lan
 dotfiles_repo: git@github.com:geordan/dotfiles.git
 dotfiles_repo_version: main
 dotfiles_repo_accept_hostkey: yes
-dotfiles_repo_local_destination: ~/code/dotfiles
+dotfiles_repo_local_destination: ~/repos/geordan/dotfiles
 dotfiles_files:
 - .alias
 - bin
