--- a/work.yml
+++ b/work.yml
@@ -23,7 +23,7 @@ zsh_fzf_history_search_dir: '~/.oh-my-zsh/custom/plugins/zsh-fzf-history-search/
 dotfiles_repo: git@github.com:geordan/dotfiles.git
 dotfiles_repo_version: main
 dotfiles_repo_accept_hostkey: yes
-dotfiles_repo_local_destination: ~/code/dotfiles
+dotfiles_repo_local_destination: ~/repos/geordan/dotfiles
 dotfiles_files:
 - .alias
 - bin
