--- a/work.yml
+++ b/work.yml
@@ -7,6 +7,7 @@ configure_hostname: no
 configure_neovim: yes
 configure_nvm: no
 configure_osx: no
+configure_repos: yes
 configure_sudoers: no
 configure_terminal: no
 configure_tmux: yes
