add k8s tools, omnifocus

--- a/work.yml
+++ b/work.yml
@@ -44,6 +44,7 @@ homebrew_installed_packages:
 - black
 - bottom
 - docker
+- eksctl
 - exa
 - flake8
 - fzf
@@ -51,6 +52,8 @@ homebrew_installed_packages:
 - gopls
 - htop
 - jq
+- kops
+- kubectl
 - lua-language-server
 - mtr
 - neovim
@@ -92,6 +95,8 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 
 homebrew_cask_apps:
+- 1password
+- 1password-cli
 - docker
 - firefox
 - font-jetbrains-mono
@@ -107,6 +112,7 @@ homebrew_cask_apps:
 - logitech-options
 - mochi
 - numi
+- omnifocus
 - rectangle
 - slack
 - spotify
@@ -116,9 +122,6 @@ homebrew_cask_apps:
 - virtualbox-extension-pack
 
 homebrew_cask_uninstalled_apps:
-- 1password
-- 1password-cli
-- 1password-cli
 - alacritty
 - calibre
 - font-fira-code
@@ -127,7 +130,6 @@ homebrew_cask_uninstalled_apps:
 - font-fira-mono-for-powerline
 - font-fira-mono-nerd-font
 - iterm2
-- omnifocus
 - qmk-toolbox
 - signal
 - svn 
