--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 - hosts: all
 
   vars_files:
-    - default.config.yml
+    - work.yml
 
   pre_tasks:
     - name: Include playbook configuration.
