--- a/work.yml
+++ b/work.yml
@@ -25,7 +25,7 @@ sudoers_custom_config: ''
 #   # Allow users in admin group to use sudo with no password.
 #   %admin ALL=(ALL) NOPASSWD: ALL
 
-dotfiles_repo: https://github.com/geordan/dotfiles.git
+dotfiles_repo: git@github.com:geordan/dotfiles.git
 dotfiles_repo_version: main
 dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/repos/geordan/dotfiles
